# website

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  rust-dev.Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yml
.github/worksflows/: ci.yml
backend/: .env  Cargo.toml  deny.toml
backend/.sqlx/: query-2a87126f0dd5035249817a7a83d1f344aa83a4d84bb5f485a5167280514044c3.json  query-2bac2daf6eeeff13921ab4039a21751f34e18f744c34fbb8536f83d6f5a9a98b.json  query-2cb935aa6a290dcad942aeeac3e9c4e46ee4078e1d71ec3a4e3a70977a7ed90a.json  query-3460c936397727dff8a601e45ea2cd9b869dc4d27f3863b2fd1f9bc01eb712ba.json  query-3d81da420c7e35d29e671964b5426c1831b9ca1c956ea0fb3d9d71d85d6ccf7c.json  query-445e0704ff94ee15412a4c9b4640a505dc749f5e594565b28592517fa83f9863.json  query-4b0b7d75eefed4dfdb146b0c3f64e312ff284f6d2ca7163ec91d9551fd53b65f.json  query-60d47695d7aa2cf1f5021a4442a26de75f8e429996b38ca4a71f647bbda1e00a.json  query-70c92e3d602a91fa4f9b73f7bf1e7b77e0d197ce6fe582f6625d4e3a7382ccb6.json  query-760f8fa2dd1802526bf173cf31275f3f5945dd35562e15f090cbc789c54a21c8.json  query-767a916c7a06160bd295c2df9883bfc0ecb7b5ee46ea86a7f73acf000d4b02d0.json  query-79bfcfa83a21da8f1464671e11ae5347e41f808ec13713caa1670e5811d275d7.json  query-86ebe498f46021d46dbd5e9a33ab5ee228bfb3c2fae10c04699640be7c29a10d.json  query-8c233749f7d2c28b15f3b890740008bce5cb5081abe4228284f8387051cd80ce.json  query-b627327c09b7ad1d2ac8c68e52cf498ef3f07457497fd1275aa2540fd46470e7.json  query-d9dcb73679923f68747d358aacb08fdc404cd09027160255ac91877faa5618fb.json  query-dcfb730b2010b6b2c1d900504e99ec0d11b72f2b419d6436245368119d69dd13.json  query-e090575aaafad57b32388c7a64faa814aa7bea865d00ce1025316ffcbfe85ebf.json  query-f3a18618a84fcdb49cc94212a7ee3734b7e871a8e9790fabc55ce310aa6ce497.json
backend/migrations/: 20241026085259_initial_scheme.sql
backend/src/: error.rs  lib.rs  main.rs  router.rs  state.rs
backend/src/api/: mod.rs  user.rs
backend/src/auth/: mod.rs  role.rs  session.rs
backend/src/data_source/: material.rs  mod.rs  user.rs
backend/src/wire/: mod.rs  user.rs  weekend.rs
client/: eslint.config.js  index.html  package-lock.json  package.json
client/src/: App.tsx  main.tsx  types.ts
client/src/pages/: Home.tsx  (+1 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx  types.ts  util.ts
src/: auth.rs  handlers.rs  main.rs  models.rs  schema.rs
(+36 files in other folders)
