[package]
name = "testapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-macros = "0.4.2"
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
tower = { version = "0.5.1", features = ["full"] }
http = "1.1.0"
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
uuid = { version = "1.11.0", features = ["v4","serde"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"