[package]
name = "nijsac-website-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
axum = { version = "0.7.7", features = ["json"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "migrate", "macros", "time", "uuid"] }
thiserror = "1.0.61"
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
argon2 = "0.5.3"
dotenvy = "0.15.7"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
memory-serve = "0.6.0"
time = { version = "0.3.36" , features = ["serde"]}
rand = "0.8.5"